--- a/style.css
+++ b/style.css
@@ -13,15 +13,22 @@
     #sidebar {
         width: 100%;
         order: 2;
+        position: -webkit-sticky;
+        position: sticky;
+        top: 56px; /* Height of your navbar */
+        height: calc(100vh - 56px);
     }
+    
 
     .items-container {
         width: 100%;
         order: 1;
+        margin-left: 0px;
     }
 }
-.items-container{
-    margin-left: 0px;
+
+main {
+    overflow-y: auto; /* Make the main content scrollable */
 }
 .box {
     color: black; /* Set the font color to black */
@@ -41,7 +48,7 @@ footer {
     background-color: #f8f9fa;
     padding: 10px;
     text-align: center;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
     display: flex;
