--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 }
 
 main {
-    overflow-y: auto; /* Make the main content scrollable */
+    overflow-y: auto; Make the main content scrollable
 }
 .box {
     color: black; /* Set the font color to black */
@@ -64,4 +64,22 @@ footer {
 }
 .card {
     margin: 10px;
+}
+.joinLinks1{
+    border: 1px solid rgb(206, 7, 7);
+    padding: 5px;
+    margin-bottom: 5px;
+    border-radius: 10px;
+}
+.joinLinks2{
+    border: 1px solid rgb(78, 245, 12);
+    padding: 5px;
+    margin-bottom: 5px;
+    border-radius: 10px;
+}
+.joinLinks3{
+    border: 1px solid rgb(5, 120, 250);
+    padding: 5px;
+    margin-bottom: 5px;
+    border-radius: 10px;
 }
