--- a/style.css
+++ b/style.css
@@ -163,4 +163,13 @@ footer {
     .secondBoundary{
         padding: 10px;
     }
+ #liveTime{
+        font-size: 24px;
+            font-weight: bold;
+            background-color:#f8f9fa;
+            padding: 10px;
+            border-radius: 10px;
+           
+           float: right;
+        }
 
